<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.chenty.demoyolo.Yolo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/exact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="exactresClick"
                android:text="@string/exactres" />

            <Button
                android:id="@+id/analyse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="analyseClick"
                android:text="@string/analyse" />

            <Button
                android:id="@+id/selectimg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="selectimgClick"
                android:text="@string/selectimg" />

        </LinearLayout>

        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tip_start"
            tools:text="@string/tip_start" />

        <ImageView
            android:id="@+id/srcimg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/dog"
            tools:layout_editor_absoluteX="162dp"
            tools:layout_editor_absoluteY="371dp" />

        <ImageView
            android:id="@+id/dstimg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/dog" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/copyright"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/copyright"
                tools:text="@string/copyright" />

            <Button
                android:id="@+id/contactme"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="2"
                android:autoSizeTextType="uniform"
                android:autoText="true"
                android:onClick="aboutClick"
                android:text="@string/contactme" />
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
